--- a/index.html
+++ b/index.html
@@ -1,63 +1,109 @@
-<!doctype html>
+<!doctype html> 
 <html>
-	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
-		<title>Training App</title>
-		<link rel="stylesheet" href="assets/css/master.css" type="text/css" media="screen" />
-		
-		<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/xui.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/lawnchair/adaptors/LawnchairAdaptorHelpers.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/lawnchair/adaptors/DOMStorageAdaptor.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/lawnchair/adaptors/WebkitSQLiteAdaptor.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/lawnchair/Lawnchair.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/dsl.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/app.js" type="text/javascript" charset="utf-8"></script>
-		
-	</head>
-	<body>
- 		<div id="title_bar">Phone<strong>Gap</strong> Training App</div>
 
-		<div id="welcome" class="view">
-		  <div class="app_button" id="map_button">Show My Location</div>
-  	      <div class="app_button" id="settings_button">Settings</div>
-		</div>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+	<link rel="stylesheet" href="./css/jquery.mobile-1.1.0.min.css" />
+	<link rel="stylesheet" href="./css/ipad.css" />
+	<link rel="apple-touch-icon" href="./images/icono.png" />
+	<script src="./js/jquery-1.7.1.js"></script>
+	<script src="./js/highstock.js"></script>
+	<script src="./js/exporting.js"></script>
+	<script src="./js/hackhighcharts.js"></script>
+	<script src="./js/jgestures.js"></script>
+	<script src="./js/graficas.js"></script>
+	<script src="./js/jquery.mobile-1.1.0.js"></script>
+	<script src="./js/cordova-1.8.1.js"></script>
+	<script src="./js/geo.js"></script>
+	<script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
 
-		<div id="map" class="view">
-		  <div class="map_image">
-              <img id="static_map" src="assets/img/staticmap.png">
-		  </div>
-		  <p>This is where you are</p>
-		  <div class="app_button" id="welcome_button">Go Back</div>
-		</div>
+	<title>Demo</title> 
+</head> 
 
-		<div id="settings" class="view">
-		  <form id="settings_form">
-		    <fieldset>
-		      <legend>Map Type</legend>
-			  <input type="radio" name="map" value="roadmap" checked>Road Map<br/>
-		      <input type="radio" name="map" value="satellite">Satellite<br/>
-		      <input type="radio" name="map" value="terrain">Terrain<br/>
-		      <input type="radio" name="map" value="hybrid">Hybrid<br/>
-		    </fieldset>
-		    <fieldset>
-		      <legend>Zoom Level</legend>
-  		      <input type="radio" name="zoom" value="10">Super Far<br/>
-  		      <input type="radio" name="zoom" value="12">Far<br/>
-  		      <input type="radio" name="zoom" value="15" checked>Normal<br/>
-  		      <input type="radio" name="zoom" value="18">Close<br/>
-  		      <input type="radio" name="zoom" value="20">Super Close<br/>
-  		     </fieldset>
-		      <button id="save_button">Save</button>
-	      </form>
-		</div>
+	
+<body> 
 
-	</body>
+<!-- Start of first page: #one -->
+<div data-role="page" id="grafica1">
+
+	<div data-role="header">
+		<h1>Banxico M&oacute;vil v0.2alpha</h1>
+	</div><!-- /header -->
+
+	<div data-role="content" >
+	  <div class="menu">
+	    <ul data-role="listview"  data-inset="true" data-theme="c" data-dividertheme="d">
+	      <li><a href="#grafica1" data-transition="slide">Series de tiempo</a></li>
+	      <li><a href="#grafica2" data-transition="slide">Grafica</a></li>
+	      <li><a href="#grafica3" onclick="getLocation();">Centros de canje</a></li>
+	    </ul>
+	  </div>
+	  <div class="contenido">
+	    <h1>Series de tiempo</h1>
+	    <div id="conGrafica">
+	      <div id="graficaSeriesDeTiempo" style="height: 500px;margin-left:auto;margin-right:auto;"></div>
+	    </div>
+	  </div>
+	</div><!-- /content -->
+	
+	<div data-role="footer" data-theme="d">
+		Banco de M&eacute;xico
+	</div><!-- /footer -->
+</div><!-- /page one -->
+<div data-role="page" id="grafica2">
+
+	<div data-role="header">
+		<h1>Banxico M&oacute;vil v0.2alpha</h1>
+	</div><!-- /header -->
+
+	<div data-role="content" >	  <div class="menu">
+	    <ul data-role="listview"  data-inset="true" data-theme="c" data-dividertheme="d">
+	      <li><a href="#grafica1" data-transition="slide">Series de tiempo</a></li>
+	      <li><a href="#grafica2" data-transition="slide">Grafica</a></li>
+	      <li><a href="#grafica3" onclick="getLocation();">Centros de canje</a></li>
+	    </ul>
+	  </div>
+
+	  <div class="contenido">
+	    <h1>Series de tiempo 2</h1>
+	    <div id="conGrafica" border"=1">
+	      <div id="containerGrafica2" style="height: 500px;margin-right:auto;"></div>
+	    </div>
+	  </div>
+	</div><!-- /content -->
+	
+	<div data-role="footer" data-theme="d">
+	  Banco de M&eacute;xico
+	</div><!-- /footer -->
+</div><!-- /page two -->
+<div data-role="page" id="grafica3">
+
+	<div data-role="header">
+		<h1>Banxico M&oacute;vil v0.2alpha</h1>
+	</div><!-- /header -->
+
+	<div data-role="content" >	  <div class="menu">
+	    <ul data-role="listview"  data-inset="true" data-theme="c" data-dividertheme="d">
+	      <li><a href="#grafica1" data-transition="slide">Series de tiempo</a></li>
+	      <li><a href="#grafica2" data-transition="slide">Grafica</a></li>
+	      <li><a href="#grafica3" onclick="getLocation();">Centros de canje</a></li>
+	    </ul>
+	  </div>
+
+	  <div class="contenido">
+	    <h1>Centros de canje</h1>
+	    <div id="cCanje" border"=1">
+	      <div id="cCanjeContainer" style="height: 500px;margin-right:auto;"></div>
+	    </div>
+	  </div>
+	</div><!-- /content -->
+	
+	<div data-role="footer" data-theme="d">
+	  Banco de M&eacute;xico
+	</div><!-- /footer -->
+</div><!-- /page tree -->
+
+</body>
 </html>
