--- a/assets/index.html
+++ b/assets/index.html
@@ -5,18 +5,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
-	<link rel="stylesheet" href="assets/css/jquery.mobile-1.1.0.min.css" />
-	<link rel="stylesheet" href="assets/css/ipad.css" />
+	<link rel="stylesheet" href="./css/jquery.mobile-1.1.0.min.css" />
+	<link rel="stylesheet" href="./css/ipad.css" />
 	<link rel="apple-touch-icon" href="./images/icono.png" />
-	<script src="assets/js/jquery-1.7.1.js"></script>
-	<script src="assets/js/highstock.js"></script>
-	<script src="assets/js/exporting.js"></script>
-	<script src="assets/js/hackhighcharts.js"></script>
-	<script src="assets/js/jgestures.js"></script>
-	<script src="assets/js/graficas.js"></script>
-	<script src="assets/js/jquery.mobile-1.1.0.js"></script>
-	<script src="assets/js/cordova-1.8.1.js"></script>
-	<script src="assets/js/geo.js"></script>
+	<script src="./js/jquery-1.7.1.js"></script>
+	<script src="./js/highstock.js"></script>
+	<script src="./js/exporting.js"></script>
+	<script src="./js/hackhighcharts.js"></script>
+	<script src="./js/jgestures.js"></script>
+	<script src="./js/graficas.js"></script>
+	<script src="./js/jquery.mobile-1.1.0.js"></script>
+	<script src="./js/cordova-1.8.1.js"></script>
+	<script src="./js/geo.js"></script>
 	<script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
 
 	<title>Demo</title> 
