--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="assets/js/jquery.mobile-1.1.0.js"></script>
 	<script src="assets/js/cordova-1.8.1.js"></script>
 	<script src="assets/js/geo.js"></script>
+	<script src="phonegap.js"></script>
 	<script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
 
 	<title>Demo</title> 
