--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script src="assets/js/jgestures.js"></script>
 	<script src="assets/js/graficas.js"></script>
 	<script src="assets/js/jquery.mobile-1.1.0.js"></script>
-	<script src="assets/js/cordova-1.8.1.js"></script>
+	<!--script src="assets/js/cordova-1.8.1.js"></script-->
 	<script src="assets/js/geo.js"></script>
 	<script src="phonegap.js"></script>
 	<script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
@@ -30,7 +30,7 @@
 <div data-role="page" id="grafica1">
 
 	<div data-role="header">
-		<h1>Banxico M&oacute;vil v0.21alpha</h1>
+		<h1>Banxico M&oacute;vil v0.22alpha</h1>
 	</div><!-- /header -->
 
 	<div data-role="content" >
